Refs #211 fix spacing of youtube and rss icons

--- a/skin/frontend/ultimo/default/css/custom.css
+++ b/skin/frontend/ultimo/default/css/custom.css
@@ -164,8 +164,8 @@ ul.links li a{display:inline-block}
 .add-to-links li.social a.facebook{margin-left:0}
 #footer-card .social-icons ul li a.twitter,.add-to-links li.social a.twitter{width: 28px;background: url('../images/twitter.png') 0 0 no-repeat;margin-left:20px;position:relative}
 .add-to-links li.social a.twitter{margin-left: 0px;}
-#footer-card .social-icons ul li a.youtube{width: 27px;height: 31px;background: url('../images/youtube.png') 0 0 no-repeat;margin-left:15px;position:relative}
-#footer-card .social-icons ul li a.rss{width: 30px;height: 29px;background: url('../images/rss.png') 0 0 no-repeat;margin-left: 10px;position:relative}
+#footer-card .social-icons ul li a.youtube{width: 27px;height: 31px;background: url('../images/youtube.png') 0 0 no-repeat;margin-left:20px;position:relative}
+#footer-card .social-icons ul li a.rss{width: 30px;height: 29px;background: url('../images/rss.png') 0 0 no-repeat;margin-left: 22px;position:relative}
 #footer-card .social-icons ul li a.pintrest:hover:after,#footer-card .social-icons ul li a.facebook:hover:after,#footer-card .social-icons ul li a.twitter:hover:after,#footer-card .social-icons ul li a.youtube:hover:after,#footer-card .social-icons ul li a.rss:hover:after,.add-to-links li.social a.pintrest:hover:after,.add-to-links li.social a.facebook:hover:after,.add-to-links li.social a.twitter:hover:after{opacity:1}
 .footer-bottom-container{padding:53px 0 25px 0}
 .footer-bottom{width:558px;margin:0 auto}
